# world-zk-compute

./: .dockerignore  .editorconfig  .env.bank-demo  .env.example  .env.sepolia.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CHALLENGES_AND_SOLUTIONS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile.cuda  Dockerfile.verifier  GUEST_PROGRAMS.md  INTERVIEW_PREP.md  LICENSE  Makefile  PLAN.md  PRIVATE_INPUT_SERVER.md  PROJECT_DEEP_DIVE.md  README.md  SECURITY.md  agents.sh  codecov.yml  docker-compose.bank-demo.yml  docker-compose.gpu.yml  docker-compose.loadtest.yml  docker-compose.monitoring.yml  docker-compose.offchain.yml  docker-compose.production.yml  docker-compose.sepolia.yml  docker-compose.test.yml  docker-compose.verifier.yml  docker-compose.yml  fly.toml.bak  fly.verifier.toml
cli/: Cargo.toml
cli/src/: main.rs
contracts/stylus/gkr-verifier/: Cargo.toml  Makefile  deploy-testnet.sh  rust-toolchain.toml
crates/zkml-verifier/: Cargo.toml  README.md
crates/zkml-verifier/benches/: verify_bench.rs
crates/zkml-verifier/fuzz/: Cargo.toml
crates/zkml-verifier/python/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
crates/zkml-verifier/src/: bundle.rs  decode.rs  ec.rs  error.rs  ffi.rs  field.rs  gkr.rs  hyrax.rs  lib.rs  main.rs  poseidon.rs  sumcheck.rs  test_utils.rs  transcript.rs  types.rs  wasm.rs
crates/zkml-verifier/tests/: off_chain_e2e.rs
examples/anomaly-detector/host/: Cargo.toml
examples/bank-demo/: Cargo.toml  sample_input.json  sample_model.json
examples/bank-demo/models/: credit_scoring.json
examples/bank-demo/src/: main.rs
examples/rule-engine-sp1/program/: Cargo.toml
examples/rule-engine/host/: Cargo.toml
examples/xgboost-remainder/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  openapi.yaml  sample_input.json  sample_model.json
examples/xgboost-remainder/benches/: prover_bench.rs
examples/xgboost-remainder/gnark-wrapper/: .gitignore  BUILD.md  Makefile  circuit.go  circuit_test.go  dag_circuit.go  dag_circuit_test.go  dag_main.go  ec_circuit.go  ec_circuit_test.go  ec_main.go  go.mod  main.go  poseidon.go  poseidon_native.go  poseidon_test.go
examples/xgboost-remainder/src/: abi_encode.rs  cache.rs  circuit.rs  detect.rs  lib.rs  lightgbm.rs  logistic_regression.rs  main.rs  mlp.rs  model.rs  proof_abi.rs  random_forest.rs  server.rs
examples/xgboost-remainder/test-model/: lightgbm_sample.json  logistic_regression_sample.json  mlp_sample.json  random_forest_sample.json
examples/xgboost-remainder/tests/: server_integration.rs
private-input-server/: Cargo.toml  Dockerfile  README.md  server.py
private-input-server/src/: auth.rs  lib.rs  main.rs  store.rs
private-input-server/tests/: integration.rs  integration_test.rs
prover/: .dockerignore  .env.example  Cargo.toml  Dockerfile  docker-compose.yml  gpu-deploy.md  prover.example.toml
prover/benches/: prover_benchmarks.rs
prover/docs/: next-gen-zkvm-architecture.md
prover/monitoring/: grafana-dashboard.json  prometheus-alerts.yml
prover/src/: aggregation.rs  alerting.rs  api.rs  audit.rs  batch_tx.rs  bonsai.rs  boundless.rs  cache.rs  circuit_breaker.rs  cluster.rs  concurrency.rs  config.rs  config_file.rs  connection_pool.rs  continuations.rs  contracts.rs  degradation.rs  errors.rs  events.rs  fast_prove.rs  gpu_manager.rs  gpu_optimize.rs  health.rs  health_checks.rs  http.rs  input_decomposer.rs  ipfs.rs  jolt_backend.rs  key_management.rs  limits.rs  logging.rs  main.rs  memory_pool.rs  metrics.rs  monitor.rs  multi_vm.rs  nonce.rs  p2p.rs  parallel.rs  prefetch.rs  (+25 more)
prover/tests/: integration_test.rs
sdk/: Cargo.toml  PRECOMPILES.md  README.md
sdk/benches/: bench_main.rs
sdk/go/: client.go  client_test.go  go.mod  types.go
sdk/python/: .env.example  README.md  e2e_batch_verify.py  pyproject.toml
sdk/python/docs/: conf.py  index.rst
sdk/python/tests/: test_anvil_integration.py  test_async_client.py  test_batch_verifier.py  test_cli.py  test_client.py  test_event_watcher.py  test_execution_engine.py  test_hash_utils.py  test_lightgbm.py  test_prover_registry.py  test_sepolia.py  test_sepolia_integration.py  test_tee_verifier.py  test_verifier.py  test_worldzk_client.py  test_xgboost.py
sdk/python/worldzk/: __init__.py  abi.py  async_client.py  batch_verifier.py  cli.py  client.py  errors.py  event_watcher.py  execution_engine.py  hash_utils.py  lightgbm.py  models.py  networks.py  prover_registry.py  tee_verifier.py  verifier.py  xgboost.py
sdk/src/: abi.rs  client.rs  error.rs  event_watcher.rs  execution_engine.rs  fixture.rs  gas_estimation.rs  hash.rs  lib.rs  metrics.rs  networks.rs  precompiles.rs  prover_registry.rs  retry.rs  tee.rs  verifier.rs
sdk/tests/: e2e_batch_verify.rs  e2e_tee_verify.rs  integration_sepolia.rs  integration_tee.rs  sepolia_integration.rs
sdk/typescript/: .env.example  README.md  package-lock.json  package.json  tsconfig.json  typedoc.json
sdk/typescript/scripts/: generate-abi.ts
sdk/typescript/src/: batch-verifier-abi.ts  batch-verifier-types.ts  batch-verifier.ts  client.ts  errors.ts  execution-engine.ts  hash.ts  health.ts  index.ts  lightgbm.ts  networks.ts  prover-registry.ts  tee-e2e.ts  tee-event-watcher.ts  tee-verifier-abi.ts  tee-verifier.ts  types.ts  worldzk-types.ts  worldzk.ts
services/admin-cli/: Cargo.toml  Dockerfile  build.rs
services/admin-cli/src/: main.rs
services/gateway/: Cargo.toml  Dockerfile  fly.toml
services/health-aggregator/: Cargo.toml
services/indexer/: Cargo.toml  Dockerfile  openapi.yaml
services/operator/: .env.example  Cargo.toml  Dockerfile  config.example.toml  config.sepolia.toml  entrypoint.sh  openapi.yaml
services/proof-generator/: Cargo.toml  Dockerfile  fly.toml
services/proof-registry/: Cargo.toml  Dockerfile  fly.toml
services/verifier/: Cargo.toml  Dockerfile  fly.toml  openapi.yaml  railway.json
tee/enclave/: .env.example  Cargo.toml  Dockerfile.nitro  build-eif.sh
tee/enclave/src/: config.rs  (+10 more)
tests/chaos/: Cargo.toml
tests/e2e/: Cargo.toml  lib.rs  runner.rs  types.rs
(+562 files in other folders)
