[workspace]
resolver = "2"
members = [
    "sdk",
    "crates/watcher",
    "crates/events",
    "crates/zkml-verifier",
    "services/operator",
    "services/admin-cli",
    "services/indexer",
    "services/health-aggregator",
    "services/verifier",
    "tee/enclave",
    "tests/chaos",
]

# Exclude crates with external/private dependencies or special build targets
exclude = [
    "prover",
    "private-input-server",
    "examples/xgboost-remainder",
    "examples/bank-demo",
    "tests/e2e",
    "contracts/lib/risc0-ethereum",
    "contracts/stylus/gkr-verifier",
]

# Dependency pinning policy: Security-critical crates are pinned to exact patch
# versions to prevent unexpected breaking changes or supply-chain issues. Update
# these versions deliberately via PR with changelog review.
[workspace.dependencies]
alloy = { version = "=1.7.3", features = ["full"] }
tokio = { version = "=1.50.0", features = ["full"] }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
tracing = "0.1"
anyhow = "1"
hex = "0.4"
sha2 = "=0.10.8"
axum = "=0.7.9"
tower-http = "0.6"
thiserror = "2"
