[package]
name = "worldzk-cli"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Verifiable AI Inference CLI -- manage models, generate proofs, verify results"

[[bin]]
name = "worldzk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
colored = "2"
