[package]
name = "private-input-server"
version = "0.1.0"
edition = "2021"
description = "Private Input Server for World ZK Compute - reference implementation for hosting private inputs behind auth"

[lib]
name = "private_input_server"
path = "src/lib.rs"

[[bin]]
name = "private-input-server"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.6", features = ["trace"] }

# Ethereum for signature verification
alloy = { version = "1.8", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Crypto
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for on-chain RPC calls)
reqwest = { version = "0.12", features = ["json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.6", features = ["derive", "env"] }

# Config
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.27"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
