[package]
name = "world-zk-prover"
version = "0.1.0"
edition = "2021"
description = "Prover node for World ZK Compute"

[[bin]]
name = "world-zk-prover"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Ethereum
alloy = { version = "0.9", features = ["full"] }

# RISC Zero
risc0-zkvm = { version = "^3.0.4" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"

# HTTP client for fetching inputs
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config
dotenvy = "0.15"

# Crypto
sha2 = "0.10"
base64 = "0.22"
