[package]
name = "world-zk-prover"
version = "0.1.0"
edition = "2021"
description = "Prover node for World ZK Compute"

[[bin]]
name = "world-zk-prover"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Ethereum
alloy = { version = "0.8", features = ["full"] }

# RISC Zero
# Enable cuda or metal features for GPU acceleration:
#   cargo build --release --features cuda    # NVIDIA GPU
#   cargo build --release --features metal   # Apple GPU
risc0-zkvm = { version = "1.2" }
bonsai-sdk = { version = "1.2" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
toml = "0.8"

# HTTP client for fetching inputs
reqwest = { version = "0.12", features = ["json", "gzip", "brotli"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config
dotenvy = "0.15"
once_cell = "1.19"

# Crypto
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"

# Cluster
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# CUDA GPU acceleration (NVIDIA) - requires CUDA toolkit installed
cuda = ["risc0-zkvm/cuda"]
# Metal GPU acceleration (Apple) - macOS only
metal = ["risc0-zkvm/metal"]
