[package]
name = "world-zk-prover"
version = "0.1.0"
edition = "2021"
description = "Prover node for World ZK Compute"

[[bin]]
name = "world-zk-prover"
path = "src/main.rs"

[[bin]]
name = "prove_benchmark"
path = "src/bin/prove_benchmark.rs"

[[bin]]
name = "test_recursive_wrapper"
path = "src/bin/test_recursive_wrapper.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# Ethereum
alloy = { version = "1.0", features = ["full"] }

# RISC Zero
# Enable cuda or metal features for GPU acceleration:
#   cargo build --release --features cuda    # NVIDIA GPU
#   cargo build --release --features metal   # Apple GPU
risc0-zkvm = { version = "3.0", features = ["prove"] }
bonsai-sdk = { version = "1.2" }
boundless-market = { version = "1.1", features = ["gcs"], optional = true }

# SP1 (optional, enable with --features sp1)
sp1-sdk = { version = "4.0.0", optional = true }

# Async traits
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
hex = "0.4"
toml = "0.8"

# HTTP client for fetching inputs
reqwest = { version = "0.13", features = ["json", "gzip", "brotli"] }

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Config
dotenvy = "0.15"
once_cell = "1.19"

# Crypto
sha2 = "0.10"
k256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
rand = "0.8"

# URL parsing
url = "2.5"

# Time
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prover_benchmarks"
harness = false

[features]
default = []
# CUDA GPU acceleration (NVIDIA) - requires CUDA toolkit installed
cuda = ["risc0-zkvm/cuda"]
# Metal GPU acceleration (Apple) - macOS only
metal = ["risc0-zkvm/metal"]
# SP1 proving backend
sp1 = ["sp1-sdk"]
# Jolt proving backend (experimental)
jolt = []
# Jolt experimental: enables actual proving (jolt feature must also be enabled).
# Without this, all Jolt prove/execute calls return a clear error.
jolt-experimental = ["jolt"]
# Remainder (GKR+Hyrax) proving backend
remainder = []
# Remainder experimental: enables actual proving (remainder feature must also be enabled).
# Without this, all Remainder prove/execute calls return a clear error.
remainder-experimental = ["remainder"]
# Boundless decentralized proving marketplace
boundless = ["boundless-market"]
