[package]
name = "world-zk-sdk"
version = "0.1.0"
edition = "2021"
description = "SDK for World ZK Compute - submit detection jobs easily"
license = "Apache-2.0"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
base64 = "0.22"

[dev-dependencies]
tokio-test = "0.4"
