[package]
name = "world-zk-sdk"
version = "0.1.0"
edition = "2021"
description = "Rust SDK for World ZK Compute — on-chain DAG circuit verification"
license = "Apache-2.0"

[dependencies]
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
thiserror = "2"
url = "2"

[dev-dependencies]
tokio-test = "0.4"
alloy = { version = "1.0", features = ["full", "provider-anvil-node"] }
