[package]
name = "world-zk-sdk"
version = "1.0.0"
edition = "2021"
description = "Rust SDK for World ZK Compute — on-chain DAG circuit verification"
license = "Apache-2.0"

[features]
default = []
tracing = ["dep:tracing"]
metrics = ["dep:prometheus"]

[dependencies]
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
url = "2"
tracing = { version = "0.1", optional = true }
prometheus = { version = "0.13", optional = true }

[dev-dependencies]
alloy = { version = "1.0", features = ["full", "provider-anvil-node"] }
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "bench_main"
harness = false
