[package]
name = "zkml-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Standalone BN254 GKR DAG verifier for ZKML proof bundles"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
wasm-bindgen = { version = "0.2", optional = true }

[features]
default = []
wasm = ["wasm-bindgen"]

[[bin]]
name = "zkml-verifier"
path = "src/main.rs"

[dev-dependencies]
