[package]
name = "bank-demo"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Bank credit scoring demo: load model -> infer -> verify"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
clap = { version = "4", features = ["derive"] }
