[package]
name = "xgboost-remainder"
version = "0.1.0"
edition = "2021"
description = "XGBoost decision tree inference proved with Remainder (GKR+Hyrax)"

[dependencies]
# Remainder proof system
remainder = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }
remainder-shared-types = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }

# BN254 curve operations
ark-bn254 = "0.5"
ark-ff = "0.5"
ark-ec = "0.5"
ark-serialize = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ABI encoding
alloy-primitives = "1.0"
alloy-sol-types = "1.0"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
