[package]
name = "xgboost-remainder"
version = "0.1.0"
edition = "2021"
description = "XGBoost decision tree inference proved with Remainder (GKR+Hyrax)"

[lib]
name = "xgboost_remainder"
path = "src/lib.rs"

[dependencies]
# Remainder proof system (from World's Remainder_CE)
frontend = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }
remainder = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }
shared-types = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }
hyrax = { git = "https://github.com/worldcoin/Remainder_CE.git", branch = "main" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Crypto
sha2 = "0.10"
hex = "0.4"

# RNG
rand = "0.8"

# Tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Field operations
ff = "0.13"

# HTTP server (warm prover mode)
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }

[[bin]]
name = "xgboost-remainder"
path = "src/main.rs"

[[bin]]
name = "dump_poseidon"
path = "src/bin/dump_poseidon.rs"

[[bin]]
name = "dump_transcript"
path = "src/bin/dump_transcript.rs"

[[bin]]
name = "dump_poseidon_constants"
path = "src/bin/dump_poseidon_constants.rs"

[[bin]]
name = "gen_poseidon_sol"
path = "src/bin/gen_poseidon_sol.rs"

[[bin]]
name = "dump_proof_json"
path = "src/bin/dump_proof_json.rs"

[[bin]]
name = "test_abi_encode"
path = "src/bin/test_abi_encode.rs"

[[bin]]
name = "gen_test_proof"
path = "src/bin/gen_test_proof.rs"

[[bin]]
name = "gen_transcript_trace"
path = "src/bin/gen_transcript_trace.rs"

[[bin]]
name = "gen_groth16_witness"
path = "src/bin/gen_groth16_witness.rs"

[[bin]]
name = "gen_dag_groth16_witness"
path = "src/bin/gen_dag_groth16_witness.rs"

[[bin]]
name = "gen_ec_groth16_witness"
path = "src/bin/gen_ec_groth16_witness.rs"

[[bin]]
name = "precompute_proof"
path = "src/bin/precompute_proof.rs"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "prover_bench"
harness = false

