[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI tool for TEEMLVerifier contract management"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde_json = "1"
url = "2"
