[package]
name = "admin-cli"
version = "0.1.0"
edition = "2021"
description = "Admin CLI tool for TEEMLVerifier contract management"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
alloy = { workspace = true }
tokio = { workspace = true }
anyhow.workspace = true
serde_json.workspace = true
url = "2"
