[package]
name = "health-aggregator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Aggregate health-check endpoint for all world-zk-compute services"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = "0.5"
