[package]
name = "health-aggregator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Health check aggregator for all World ZK Compute services"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
axum = "0.7"
tracing = "0.1"
tracing-subscriber = "0.3"
