[package]
name = "tee-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tee-indexer"
path = "src/main.rs"

[features]
default = []
postgres = ["sqlx"]

[dependencies]
tee-watcher = { path = "../../crates/watcher" }
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
tower-http = { workspace = true, features = ["set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
