[package]
name = "tee-indexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tee-indexer"
path = "src/main.rs"

[features]
default = []
postgres = ["sqlx"]

[dependencies]
tee-watcher = { path = "../../crates/watcher" }
alloy = { version = "1.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"], optional = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { workspace = true, features = ["set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
ipnet = "2"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tokio-tungstenite = "0.24"
futures-util = "0.3"
