[package]
name = "tee-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
world-zk-sdk = { path = "../../sdk" }
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
hex = "0.4"
anyhow = "1"
