[package]
name = "tee-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
world-zk-sdk = { path = "../../sdk" }
tee-watcher = { path = "../../crates/watcher" }
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hex = "0.4"
anyhow = "1"
thiserror.workspace = true
ciborium = "0.2"
base64 = "0.22"
p384 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["verifying"] }
x509-cert = "0.2"
der = { version = "0.7", features = ["std", "pem"] }
axum = "0.7"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
alloy = { version = "1.0", features = ["full", "provider-anvil-node"] }
