[package]
name = "tee-operator"
version = "0.1.0"
edition = "2021"

[dependencies]
world-zk-sdk = { path = "../../sdk" }
tee-watcher = { path = "../../crates/watcher" }
alloy = { version = "1.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
hex = "0.4"
anyhow = "1"
thiserror.workspace = true
# -- Nitro attestation verification --
ciborium = "0.2"            # CBOR decoding for AWS Nitro attestation documents
base64 = "0.22"             # Base64 decoding of attestation payloads
p384 = { version = "0.13", features = ["ecdsa"] }   # NIST P-384 curve for Nitro attestation signature verification
ecdsa = { version = "0.16", features = ["verifying"] }  # ECDSA signature verification primitives
x509-cert = "0.2"           # Parse X.509 certificates from Nitro enclave certificate chain
der = { version = "0.7", features = ["std", "pem"] }    # ASN.1 DER encoding/decoding for certificate validation
# -- HTTP + config --
axum = "0.7"
toml = "0.8"                # Parse operator configuration files
uuid = { version = "1", features = ["v4"] }
secrecy = { version = "0.10", features = ["serde"] }  # Zeroize-on-drop wrappers for secrets

[dev-dependencies]
tempfile = "3"
serial_test = "3"
alloy = { version = "1.0", features = ["full", "provider-anvil-node"] }
