[package]
name = "proof-registry"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Proof registry service — store, index, search, and verify proof bundles"

[[bin]]
name = "proof-registry"
path = "src/main.rs"

[features]
default = []
s3 = ["aws-sdk-s3", "aws-config"]

[dependencies]
zkml-verifier = { path = "../../crates/zkml-verifier" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
tracing-subscriber = "0.3"
k256 = { version = "0.13", features = ["ecdsa"] }
sha2 = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
async-trait = "0.1"
aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", features = ["behavior-version-latest"], optional = true }

[dev-dependencies]
tower = "0.5"
tempfile = "3"
