[package]
name = "tee-enclave"
version = "0.1.0"
edition = "2021"

[lib]
name = "tee_enclave"
path = "src/lib.rs"

[[bin]]
name = "tee-enclave"
path = "src/main.rs"

[features]
default = []
nitro = ["aws-nitro-enclaves-nsm-api"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
base64 = "0.22"
rand = "0.9"
alloy-primitives = "1.0"
alloy-signer = "1.0"
alloy-signer-local = "1.0"
hex = "0.4"
sha2 = "0.10"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tower = "0.5"
serial_test = "3"
tempfile = "3"

# NSM API is only available on Linux (Nitro enclaves).
# This dep is resolved but not compiled on non-Linux platforms.
# Code gates actual usage behind #[cfg(all(feature = "nitro", target_os = "linux"))].
[target.'cfg(target_os = "linux")'.dependencies]
aws-nitro-enclaves-nsm-api = { version = "0.4", optional = true }
