[package]
name = "chaos-tests"
version = "0.1.0"
edition = "2021"
description = "Chaos / fault injection tests for operator and enclave services"
publish = false

[lib]
name = "chaos_tests"
path = "src/mod.rs"

[dependencies]
# Operator library (circuit breaker, state store, notifications, etc.)
tee-operator = { path = "../../services/operator" }

# Enclave library (watchdog, metrics, model_registry, validation)
tee-enclave = { path = "../../tee/enclave" }

# Async runtime
tokio = { version = "1", features = ["full", "test-util"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP server (for mock webhook + enclave tests)
axum = "0.7"
reqwest = { version = "0.13", features = ["json"] }

# Alloy primitives for B256/Address types (used by DeadlineMonitor)
alloy = { version = "1.0", features = ["full", "provider-anvil-node"] }

# Hex encoding
hex = "0.4"

# Error handling
anyhow = "1"

# Temp directories for state file tests
tempfile = "3"

[[test]]
name = "operator_chaos"
path = "src/operator_chaos.rs"

[[test]]
name = "enclave_chaos"
path = "src/enclave_chaos.rs"

[[test]]
name = "fault_scenarios"
path = "src/fault_scenarios.rs"

[[test]]
name = "e2e_lifecycle"
path = "src/e2e_lifecycle.rs"
