[package]
name = "gkr-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
stylus-sdk = { version = "0.9.0", optional = true }
alloy-primitives = { version = "0.8.20", optional = true }
alloy-sol-types = { version = "0.8.20", optional = true }
hex = "0.4.3"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["stylus"]
stylus = ["dep:stylus-sdk", "dep:alloy-primitives", "dep:alloy-sol-types"]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
incremental = false
