[package]
name = "gkr-verifier"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
[dependencies]
stylus-sdk = { version = "0.9.2", optional = true }
alloy-primitives = { version = "0.8.20", optional = true }
alloy-sol-types = { version = "0.8.20", optional = true }
ruint = { version = "=1.15.0", optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"

# test_utils module needs serde_json/hex for native builds (gated behind cfg(not(wasm32)))
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4.3"

[features]
default = ["stylus"]
stylus = ["dep:stylus-sdk", "dep:alloy-primitives", "dep:alloy-sol-types", "dep:ruint"]
export-abi = ["stylus", "stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"
debug = false
rpath = false
debug-assertions = false
incremental = false
