[package]
name = "zkml-verifier-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1"
arbitrary = { version = "1", features = ["derive"] }
hex = "0.4"

[dependencies.zkml-verifier]
path = ".."

# Prevent this from being picked up by workspace
[workspace]

[[bin]]
name = "fuzz_verify_raw"
path = "fuzz_targets/fuzz_verify_raw.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_bundle_json"
path = "fuzz_targets/fuzz_bundle_json.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_proof_decode"
path = "fuzz_targets/fuzz_proof_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_verify_bundle"
path = "fuzz_targets/fuzz_verify_bundle.rs"
test = false
doc = false
bench = false
