[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zkml-verifier"
version = "0.1.0"
description = "Zero-knowledge proof verifier for ML inference (GKR+Hyrax on BN254)"
license = "Apache-2.0"
requires-python = ">=3.8"
readme = "README.md"
keywords = ["zkml", "zero-knowledge", "gkr", "hyrax", "verifier", "machine-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/OE-GOD/world-zk-compute"
Repository = "https://github.com/OE-GOD/world-zk-compute"
Documentation = "https://github.com/OE-GOD/world-zk-compute/tree/main/crates/zkml-verifier/python"
Issues = "https://github.com/OE-GOD/world-zk-compute/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["zkml_verifier*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
