[package]
name = "anomaly-detector-host"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0"
base64 = "0.22"
